--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,4 +7,6 @@
     <string name="login_activity_signup_button">¿No tienes una cuenta aun? Registrate</string>
     <string name="activity_login_email_error">ingresa un correo electronico valido</string>
     <string name="activity_login_email_password_error">Ingresa la contraseña</string>
+    <string name="activity_login_verify_email_toast">"Por favor verifique su dirección de correo electrónico "</string>
+    <string name="activity_sign_up_signup_button">Registrarse</string>
 </resources>
