--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="login_activity_signup_button">Don\'t have an account yet? Sign Up.</string>
     <string name="activity_login_email_error">Enter valid email address</string>
     <string name="activity_login_email_password_error">Enter the password</string>
-    <string name="facebook_app_id">1943884392593066</string>
-    <string name="fb_login_protocol_scheme">fb1943884392593066</string>
+    <string name="facebook_app_id" translatable="false">1943884392593066</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb1943884392593066</string>
+    <string name="activity_login_verify_email_toast">Please verify your email address</string>
+    <string name="activity_sign_up_signup_button">Sign Up</string>
 </resources>
