--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,10 +3,11 @@
     <string name="app_name">Restock</string>
     <string name="activity_login_email_hint">Email</string>
     <string name="activity_login_password_hint">Password</string>
-    <string name="activity_login_login_button">Login</string>
     <string name="login_activity_signup_button">Don\'t have an account yet? Sign Up.</string>
     <string name="activity_login_email_error">Enter valid email address</string>
     <string name="activity_login_email_password_error">Enter the password</string>
     <string name="activity_login_verify_email_toast">please verify your email address</string>
     <string name="activity_sign_up_signup_button">Sign Up</string>
+    <string name="activity_login_login_button">Sign In</string>
+    <string name="activity_main_title">Stock</string>
 </resources>
