--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,4 +10,6 @@
     <string name="activity_login_verify_email_toast">"Por favor verifique su dirección de correo electrónico "</string>
     <string name="activity_sign_up_signup_button">Registrarse</string>
     <string name="activity_main_title">Stock</string>
+    <string name="error_out_of_stock">Agotado</string>
+    <string name="msg_activity_login_or">O</string>
 </resources>
