--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="activity_main_title">Stock</string>
+    <string name="error_out_of_stock">Out of stock</string>
+    <string name="msg_activity_login_or">Or</string>
 </resources>
