--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,14 @@
     <string name="activity_main_title">Stock</string>
     <string name="error_out_of_stock">Out of stock</string>
     <string name="msg_activity_login_or">Or</string>
+    <string name="title_drawer_profile">Profile</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_drawer_sign_out">Sign out</string>
+    <string name="title_drawer_settings">Settings</string>
+    <string name="title_drawer_terms">Terms and privacy policy</string>
+    <string name="title_drawer_history">History</string>
+    <string name="title_fragment_product_description">Description</string>
+    <string name="title_fragment_product_goes">Goes with</string>
+    <string name="title_fragment_product_grape">Grape</string>
+    <string name="title_fragment_product_year">Year of origin</string>
 </resources>
