Product item modificado y spinner agregado con funcionalidad, objeto para la orden y el contenido de la orden agregado

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,4 +22,7 @@
     <string name="title_fragment_product_goes">Acompañalo con</string>
     <string name="title_fragment_product_grape">Uva</string>
     <string name="title_fragment_product_year">Año de origen</string>
+    <string name="title_product_quantity">Cantidad</string>
+    <string name="action_product_next">OK</string>
+    <string name="action_product_cancel">Cancelar</string>
 </resources>
