--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,6 +29,12 @@
     <string name="message_cart_empty">Your Shopping Cart is empty</string>
     <string name="tittle_total">Total:</string>
     <string name="action_continue">Continue</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_sign_up">Sign up</string>
+    <string name="title_activity_profile_information">Profile</string>
+    <string name="title_activity_history">History</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_cart">Shopping cart</string>
     <string name="activity_map_order_current_location">Use current location</string>
     <string name="activity_map_order_map_location">Use location on map</string>
     <string name="text_status_order_detail_dialog">Pending</string>
